objects/LAT_SellOutCollectLine__c.object
<CustomObject>
    <fields>
        <fullName>Bottle__c</fullName>
        <label>$ Bottle</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dose__c</fullName>
        <label>$ Dose</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Positivated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Positivated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RecordTypeHeader__c</fullName>
        <formula>SellOutCollect__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RecordType Header</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReferenceProductGrouping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reference Product Grouping</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2 AND 3) OR (4 AND NOT (5))</booleanFilter>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>LAT_AR2_Vendedor</value>
            </filterItems>
            <filterItems>
                <field>LAT_ReferenceProductGrouping__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>LAT_Volumen</value>
            </filterItems>
            <filterItems>
                <field>LAT_ReferenceProductGrouping__c.ExternalId__c</field>
                <operation>startsWith</operation>
                <value>6</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>notEqual</operation>
                <value>LAT_AR2_Vendedor</value>
            </filterItems>
            <filterItems>
                <field>LAT_ReferenceProductGrouping__c.ExternalId__c</field>
                <operation>startsWith</operation>
                <value>6</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>LAT_ReferenceProductGrouping__c</referenceTo>
        <relationshipLabel>SellOut Collect Lines</relationshipLabel>
        <relationshipName>SellOut_Collect_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SellOutCollect__c</fullName>
        <label>SellOut Collect</label>
        <referenceTo>LAT_SellOutCollect__c</referenceTo>
        <relationshipLabel>Linha Coleta</relationshipLabel>
        <relationshipName>LAT_SellOutCollectLines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SellOut__c</fullName>
        <label>Volume (BT)</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stock__c</fullName>
        <label>Stock</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>SellOut Collect Line</label>
    <nameField>
        <displayFormat>SCL-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SellOut Collect Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>